tests/fixtures/invalid/min_set_int.py
# Cannot call min() with Set[int], Int
x = min({1, 2, 3}, 1)
